tests/algorithms/x/C/searches/hill_climbing.c
// Generated by Mochi 0.10.32 on 2025-08-23 21:18 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>

size_t neighbors_len;

size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct SearchProblem SearchProblem;

struct SearchProblem {
    double x;
    double y;
    double step;
    double (*f)(double, double);
};

static SearchProblem* list_append_SearchProblem(SearchProblem *arr, size_t *len, SearchProblem val) {
    arr = realloc(arr, (*len + 1) * sizeof(SearchProblem));
    arr[*len] = val;
    (*len)++;
    return arr;
}

double score(SearchProblem sp);
SearchProblem * neighbors(SearchProblem sp);
long long equal_state(SearchProblem a, SearchProblem b);
long long contains_state(SearchProblem * lst, size_t lst_len, SearchProblem sp);
SearchProblem hill_climbing(SearchProblem sp, long long find_max, double max_x, double min_x, double max_y, double min_y, long long max_iter);
double test_f1(double x, double y);
void user_main();
int main(void);

double score(SearchProblem sp) {
    return sp.f;
}

SearchProblem * neighbors(SearchProblem sp) {
    double s = sp.step;
    {
        SearchProblem* __tmp0_data = malloc(8 * sizeof(SearchProblem));
        __tmp0_data[0] = (SearchProblem){.x = sp.x - s, .y = sp.y - s, .step = s, .f = sp.f};
        __tmp0_data[1] = (SearchProblem){.x = sp.x - s, .y = sp.y, .step = s, .f = sp.f};
        __tmp0_data[2] = (SearchProblem){.x = sp.x - s, .y = sp.y + s, .step = s, .f = sp.f};
        __tmp0_data[3] = (SearchProblem){.x = sp.x, .y = sp.y - s, .step = s, .f = sp.f};
        __tmp0_data[4] = (SearchProblem){.x = sp.x, .y = sp.y + s, .step = s, .f = sp.f};
        __tmp0_data[5] = (SearchProblem){.x = sp.x + s, .y = sp.y - s, .step = s, .f = sp.f};
        __tmp0_data[6] = (SearchProblem){.x = sp.x + s, .y = sp.y, .step = s, .f = sp.f};
        __tmp0_data[7] = (SearchProblem){.x = sp.x + s, .y = sp.y + s, .step = s, .f = sp.f};
        neighbors_len = 8;
        return __tmp0_data;
    }
}

long long equal_state(SearchProblem a, SearchProblem b) {
    return (a.x == b.x) && (a.y == b.y);
}

long long contains_state(SearchProblem * lst, size_t lst_len, SearchProblem sp) {
    long long i = 0LL;
    while (i < lst_len) {
        if (equal_state(lst[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? lst_len + _mochi_idx : _mochi_idx;})], sp)) {
            return 1LL;
        }
        i = i + 1LL;
    }
    return 0LL;
}

SearchProblem hill_climbing(SearchProblem sp, long long find_max, double max_x, double min_x, double max_y, double min_y, long long max_iter) {
    SearchProblem current = sp;
    SearchProblem *visited = NULL;
    size_t visited_len = 0;
    long long iterations = 0LL;
    long long solution_found = 0LL;
    while ((solution_found == 0LL) && (iterations < max_iter)) {
        visited = list_append_SearchProblem(visited, &visited_len, current);
        iterations = iterations + 1LL;
        double current_score = score(current);
        SearchProblem *neighs = neighbors(current);
        size_t neighs_len = neighbors_len;
        double max_change = -1e+18;
        double min_change = 1e+18;
        long long next = current;
        long long improved = 0LL;
        long long i = 0LL;
        while (i < neighs_len) {
            SearchProblem n = neighs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? neighs_len + _mochi_idx : _mochi_idx;})];
            i = i + 1LL;
            if (contains_state(visited, visited_len, n)) {
                continue;
            }
            if ((((n.x > max_x) || (n.x < min_x)) || (n.y > max_y)) || (n.y < min_y)) {
                continue;
            }
            double change = score(n) - current_score;
            if (find_max) {
                if ((change > max_change) && (change > 0.0)) {
                    max_change = change;
                    next = n;
                    improved = 1LL;
                }
            } else {
                if ((change < min_change) && (change < 0.0)) {
                    min_change = change;
                    next = n;
                    improved = 1LL;
                }
            }
        }
        if (improved) {
            current = next;
        } else {
            solution_found = 1LL;
        }
    }
    return current;
}

double test_f1(double x, double y) {
    return (x * x) + (y * y);
}

void user_main() {
    SearchProblem prob1 = (SearchProblem){.x = 3.0, .y = 4.0, .step = 1.0, .f = test_f1};
    SearchProblem local_min1 = hill_climbing(prob1, 0LL, 1e+09, -1e+09, 1e+09, -1e+09, 10000LL);
    puts(str_int((int)(score(local_min1))));
    SearchProblem prob2 = (SearchProblem){.x = 12.0, .y = 47.0, .step = 1.0, .f = test_f1};
    SearchProblem local_min2 = hill_climbing(prob2, 0LL, 100.0, 5.0, 50.0, -5.0, 10000LL);
    puts(str_int((int)(score(local_min2))));
    SearchProblem prob3 = (SearchProblem){.x = 3.0, .y = 4.0, .step = 1.0, .f = test_f1};
    SearchProblem local_max = hill_climbing(prob3, 1LL, 1e+09, -1e+09, 1e+09, -1e+09, 1000LL);
    puts(str_int((int)(score(local_max))));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
